--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
   <div class="font-sans mt-2 flex items-center justify-center gap-3 mb-10">
     <img src="./src/assets/logo.png" alt="TypeScript Toastify Logo" class="w-12 mt-3 logo" />
-    <h1 class="text-4xl font-bold text-[#3178C6] heading"><a href="https://github.com/aayushmaan-54/TypeScript-Toastify-Library/tree/main" target="_blank">TypeScript Toastify 📎</a></h1>
+    <h1 class="text-4xl font-bold text-[#3178C6] heading"><a href="https://www.npmjs.com/package/typescript-toastify" target="_blank">TypeScript Toastify 📎</a></h1>
   </div>
 
   <div class="flex flex-col items-center justify-center">
     <pre class="rounded-lg snippet">
-      <code class="border-2 border-[#3178C6]">import Toast from "ts-toastify";
+      <code class="border-2 border-[#3178C6]">import Toast from typescript-toastify;
 
 const toast = new Toast({
   position: &quot;top-right&quot;,
@@ -157,19 +157,19 @@ const toast = new Toast({
     <hr class="mt-11 opacity-50">
     <h1 class="text-[#3178C6]">Features: </h1>
     <ol class="list-disc flex flex-col gap-3">
-      <li>Easy to set up</li>
+      <li>Easy to set up 😊</li>
       <li>Super easy to customize</li>
-      <li>Has onClose function, which runs function you define when toast closes</li>
-      <li>Can remove a toast programmatically</li>
+      <li>Has onClose function, which runs function you define when toast closes ❌</li>
+      <li>Can remove a toast programmatically 🧑🏻‍💻</li>
       <li>Update toast in between</li>
-      <li>Pause toast when the window loses focus 👁</li>
+      <li>Pause toast when the window loses focus 👀</li>
       <li>Pause toast on toast hover</li>
       <li>Fancy progress bar to display the remaining time</li>
       <li>Dark mode 🌑</li>
       <li>Set custom position</li>
       <li>Set toast closing time</li>
-      <li>Can use different types of toast like info, error, warning</li>
-      <li>And much more!</li>
+      <li>Can use different types of toast like info, error, warning ⚠️</li>
+      <li>And much more! 😃</li>
     </ol>
   </div>
 
@@ -179,22 +179,22 @@ const toast = new Toast({
     <hr class="mt-11 opacity-50">
 
     <h1 class="mt-10 mb-5 text-center text-[#3178C6]">Documentation</h1>
-    <p><span class="code">TS-Toastify</span> is a TypeScript library for creating customizable toast notifications in
+    <p><span class="code">TypeScript-Toastify</span> is a TypeScript library for creating customizable toast notifications in
       web applications.
       This documentation provides an overview of the available options, how to create a toast, and their respective
       types.</p>
 
     <h3>Installation</h3>
-    <p>To use TypeScript Toastify in your project, you can install it via npm:</p>
+    <p>To use <span class="code">TypeScript-Toastify</span> in your project, you can install it via npm:</p>
     <pre>
-      <code>npm i ts-toastify</code>
+      <code>npm i typescript-toastify</code>
     </pre>
 
     <h3>Usage</h3>
     <p>To create a toast using TypeScript Toastify, you need to instantiate the Toast class with the desired options.
       Here's how you can create a toast:</p>
     <pre>
-      <code>import Toast from 'ts-toastify';
+      <code>import Toast from 'typescript-toastify';
 
 const toast = new Toast({
   position: &quot;top-right&quot;,
@@ -210,7 +210,7 @@ const toast = new Toast({
     </pre>
 
     <h2>Options</h2>
-    <p><span class="code">TS-Toastify</span> supports the following options: </p>
+    <p><span class="code">TypeScript-Toastify</span> supports the following options: </p>
     <h3>position (string)</h3>
     <p>Specifies the position where the toast notification will appear on the screen.</p>
     <p class="font-bold">Options:</p>
@@ -286,7 +286,7 @@ toast.remove( );</code>
 
     <h3>Example: </h3>
     <pre>
-      <code>import Toast from 'ts-toastify';
+      <code>import Toast from 'typescript-toastify';
 
 const toast = new Toast({
   position: "top-right",
@@ -303,7 +303,7 @@ const toast = new Toast({
     </pre>
 
     <h3>Conclusion</h3>
-    <p><span class="code">TS-Toastify</span> offers a simple and customizable way to implement toast notifications in
+    <p><span class="code">TypeScript-Toastify</span> offers a simple and customizable way to implement toast notifications in
       your TypeScript web
       applications. With various options for positioning, styling, and behavior, you can tailor the toast notifications
       to suit your application's needs.</p>
